# TrackSensei-Server

./: .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  cert.pem  key.pem  pyproject.toml
.cursor/rules/: fastapi.mdc  postgre.mdc
backend/: main.py
backend/api/routes/: auth.py  dashboard.py  laps.py  sessions.py  settings.py  telemetry.py  users.py  vehicles.py
backend/api/schemas/: auth.py  laps.py  sessions.py  settings.py  telemetry.py  users.py  vehicles.py
backend/api/utils/: auth.py  config.py
backend/db/: db.py
backend/db/models/: __init__.py  auth.py  lap.py  laps.py  sessions.py  settings.py  telemetry.py  track.py  tracks.py  user.py  users.py  vehicles.py
frontend/: index.html
